public/css/z.css
/*
 * quick globals
 */

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del,
dfn, em, img, ins, q, small, strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption,
tbody, tfoot, thead, tr, th, td
{
	margin: 0;
	padding: 0;
	border: 0;
}
article, aside, figure, figure img, figcaption, hgroup, footer, header, nav, section, video, object
{
	display: block;
}
a
{
	color: #456;
	text-decoration: none;
	transition: all .20s ease-in-out;
	-khtml-transition: all .20s ease-in-out;
	-moz-transition: all .20s ease-in-out;
	-ms-transition: all .20s ease-in-out;
	/*-o-transition: all .20s ease-in-out;*/
	-webkit-transition: all .20s ease-in-out;
}
a:focus, a:hover
{
	color: #039;
	text-decoration: none;
}
a img
{
	border: 0;
}
li
{
	list-style: none;
}
fieldset
{
	border-radius: 4px;
	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-khtml-border-radius: 4px;
	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-moz-border-radius: 4px;
	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-o-border-radius: 4px;
	-o-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-webkit-border-radius: 4px;
	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	background: #f6f6f6;
	border: 1px solid #c4c4c4;
	margin: 0;
	padding: 10px;
	behavior: url(border-radius.htc);
}
footer
{
	/* do something at the bottom of the page eventually, probably a "load more" button */
}
header
{
	background-color: #f6f6f6;
	display: block;
	width: 99%;
	left: 0px;
	position: fixed;
	top: 0px;
	z-index: 500;
}
legend
{
	border-radius: 4px;
	-khtml-border-radius: 4px;
	-moz-border-radius: 4px;
	-o-border-radius: 4px;
	-webkit-border-radius: 4px;
	background: #f6f6f6;
	border: 1px dashed #c4c4c4;
	padding: 5px;
	font-weight: bold;
	behavior: url(border-radius.htc);
}
.hr
{
	height: 1px;
	margin-left: 15px;
	margin-right: 15px;
	background: #fff;
	background: #fff no-repeat center top -moz-radial-gradient(top center, #ddd, #fff);
	background: #ddd no-repeat top center -webkit-gradient(radial, center top, 0, center top, 1000, from(#ddd), to(#fff));
}
.huge, h1
{
	text-shadow: rgba(215,215,215,0.3) 5px 5px 8px;
	cursor: default;
	font-size: 68px;
	color: #555;
	letter-spacing: -1px;
	padding: 0 20px;
	text-align: center;
}
.large, h2
{
	font-size: 42px;
	color: #555;
	letter-spacing: -1px;
	text-align: center;
}
.big, h3
{
	font-size: 26px;
}
.small, small
{
	font-size: 13px;
}
.left,.alignleft
{
	float: left;
}
.right,.alignright
{
	float: right;
}
.clear,.clearer
{
	clear: both;
}
.clearer
{
	display: block;
	font-size: 0;
	height: 0;
}

/*
 * animations
 */
@keyframes fadein
{
	from {display: none; opacity: 0;}
	to {display: block; opacity: 1;}
}
@-moz-keyframes fadein
{
	from {display: none; opacity: 0;}
	to {display: block; opacity: 1;}
}
@-webkit-keyframes fadein
{
	from {display: none; opacity: 0;}
	to {display: block; opacity: 1;}
}
@keyframes fadeout
{
	from {display: block; opacity: 1;}
	to {display: none; opacity: 0;}
}
@-moz-keyframes fadeout
{
	from {display: block; opacity: 1;}
	to {display: none; opacity: 0;}
}
@-webkit-keyframes fadeout
{
	from {display: block; opacity: 1;}
	to {display: none; opacity: 0;}
}

/*
 * fade in between containers
 */
.hider
{
	display: none;
	animation: fadeout 0.5s ease-in-out;
	-moz-animation: fadeout 0.5s ease-in-out;
	-webkit-animation: fadeout 0.5s ease-in-out;
}
.shower
{
	display: block;
	animation: fadein 0.5s ease-in-out;
	-moz-animation: fadein 0.5s ease-in-out;
	-webkit-animation: fadein 0.5s ease-in-out;
}

/*
 * tweet related css
 */
.comment-parent
{
	animation: fadein 1s ease-in-out;
	display: block;
	margin-top: 15px;
	margin-bottom: 15px;
	z-index: 50;
	-moz-animation: fadein 1s ease-in-out;
	-webkit-animation: fadein 1s ease-in-out;
}
.comment-parent-drop
{
	animation: fadeout 1s ease-in-out;
	display: none;
	margin-top: 15px;
	margin-bottom: 15px;
	z-index: 50;
	-moz-animation: fadeout 1s ease-in-out;
	-webkit-animation: fadeout 1s ease-in-out;
}
.comment-list ul.children, #comments #respond ul
{
	margin: 0 0 0 130px;
}
.comment-list ul.children ul.children
{
	margin-left: 15px;
}
.comment-list ul.children li
{
	background: url('/img/comment-reply.png') no-repeat left top;
	margin: 0;
	padding: 10px 0 0 15px;
}
.comment-author
{
	padding-top: 2px;
}
.comment-text p
{
	margin-bottom: 0.5em;
}
.comment-text-select
{
	user-select: text;
	-khtml-user-select: text;
	-moz-user-select: text;
	-ms-user-select: text;
	-o-user-select: text;
	-webkit-user-select: text;
}
.comment-text img
{
	cursor: pointer;
	margin-left: 10px;
}
.post-date, .comment-author
{
	font-size: 0.87em;
	padding-top: 4px;
	padding-top: 4px;
}
.comment-body, .comment-body-mentioned, .comment-body-me
{
	border-radius: 5px;
	-khtml-border-radius: 5px;
	-moz-border-radius: 5px;
	-o-border-radius: 5px;
	-webkit-border-radius: 5px;
	background-color: white;
	border: 1px solid #DDD;
	letter-spacing: 0.5px;
	padding: 1px 12px 0 9px;

	behavior: url(border-radius.htc);
}
.comment-body
{
	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-o-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
}
.comment-body-mentioned
{
	box-shadow: 2px 2px 5px #FFB4B8;
	-khtml-box-shadow: 2px 2px 5px #FFB4B8;
	-moz-box-shadow: 2px 2px 5px #FFB4B8;
	-o-box-shadow: 2px 2px 5px #FFB4B8;
	-webkit-box-shadow: 3px 3px 2px 2px #FFB4B8;
}
.comment-body-me
{
	box-shadow: 2px 2px 5px #BDC3FF;
	-khtml-box-shadow: 2px 2px 5px #BDC3FF;
	-moz-box-shadow: 2px 2px 5px #BDC3FF;
	-o-box-shadow: 2px 2px 5px #BDC3FF;
	-webkit-box-shadow: 3px 3px 2px 2px #BDC3FF;
}
.comment-arrow
{
	background: url('/img/comment-arrow.png') no-repeat left top;
	display: block;
	float: left;
	height: 35px;
	margin: 14px 0 -46px -29px;
	position: absolute;
	width: 20px;
}
.comment-list-wrapper
{
	padding: 5px 12px 10px 7px;
}
/* ... */

